infra/k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cmdb
  labels:
    name: cmdb
    environment: production
